Fix horizontal overflow in code block

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -29,7 +29,7 @@
     }
 
     .ion-knife {
-      margin-right: 5px;
+      margin-right: 3px;
     }
 
     .ion-woman {
@@ -43,6 +43,10 @@
 
   .ion {
     font-size: calc(1.0em + 0.5vw) !important;
+  }
+
+  ul {
+    padding-left: 20px;
   }
 
 }
